package ru.isador.jcqm.model;

public interface MethodInfo {

    int getCcn();

    String getName();
}
